Update Swagger documentation, so i can use it with build in client
I have remove cors becouse i want   see the error
